# react-2025

./: .env  .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
AI-AGENTIC-APP/: .dockerignore  .env  Makefile  docker-compose.yml
agents/: Dockerfile  langgraph.json  requirements.txt
client/: package.json  (+3 more)
server/: boot.sh  pyproject.toml  requirements.txt  run.py
server/app/: constants.py  dependencies.py  main.py
server/app/api/v1/endpoints/: __init__.py  auth.py  email.py  posts.py  users.py
server/app/config/: __init__.py  config.py  email.py  settings.py
server/app/core/: decorators.py  logging.py  protocols.py  ratelimiter.py
server/app/database/: __init__.py  base.py  base_model.py  init_db.py  mixins.py  session.py
server/app/exceptions/: database.py
server/app/middleware/: ip_address_middleware.py
server/app/models/: __init__.py  blockedips.py  email.py  models.py  post.py  roles.py  tokens.py  users.py
server/app/repositories/: auth.py  base.py  post.py  token.py  user.py
server/app/schemas/: auth.py  blocked_ip.py  common.py  post.py  role.py  token.py  user.py
server/app/services/: auth_service.py  email.py  token_service.py
server/app/services/email/: __init__.py  renderer.py  services.py  smtp.py
server/app/templates/email/: account_activation.html  account_activation.txt  account_activation_confirm.html  account_activation_confirm.txt  password_reset.html  password_reset.txt  welcome.html  welcome.txt
server/app/utils/: emailSettings.py  password.py  retry.py  security.py
(+182 files in other folders)
